--- a/ProjectFinal/src/main/resources/application.properties
+++ b/ProjectFinal/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=app
 spring.datasource.url = jdbc:mysql://127.0.0.1:3306/Projet?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
 spring.datasource.username=root
+server.port=8082
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
